Update the correct layout

--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -53,6 +53,8 @@ online workshops.
     <link rel="stylesheet" type="text/css" href="{{ relative_root_path }}/assets/css/bootstrap-theme.css" />
     <link rel="stylesheet" type="text/css" href="{{ relative_root_path }}/assets/css/lesson.css" />
 
+    <link rel="stylesheet" type="text/css" href="https://pretix.eu/ARC/swc-2024-07-24/widget/v1.css" crossorigin>
+    <script type="text/javascript" src="https://pretix.eu/widget/v1.en.js" async crossorigin></script>
     {% include favicons.html %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
